--- a/SAGWeb/appsettings.json
+++ b/SAGWeb/appsettings.json
@@ -8,14 +8,16 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=TAKK;Database=SAGRISA_DB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=34.46.92.183;Database=SAGRISA_DB;User Id=admin;Password=admin;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
   "EmailSettings": {
-    "From": "christ.rebolone@gmail.com",
-    "SmtpHost": "smtp.gmass.co",
-    "Port": "465",
-    "User": "gmass",
-    "Password": "73434895-d414-46fd-894e-93bda06c59dc"
+    "FromEmail": "christ.rebolone@gmail.com",
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SmtpUser": "christ.rebolone@gmail.com",
+    "SmtpPass": "nwcl yrcw jqgk locd",
+    "FromName": "SAGRISA",
+    "EnableSsl": "true"
   }
 }
